# badgehub-client-wip

./: .gitignore  .gitmodules  CMakeLists.txt  simulator.code-workspace
main/src/: app_card.c  app_card.h  app_data_manager.c  app_data_manager.h  app_detail.c  app_detail.h  app_home.c  app_home.h  app_list.c  app_list.h  badgehub_client.c  badgehub_client.h  main.c  utils.h
main/src/badgehub_client/: badgehub_client.c  badgehub_client.h
main/src/lvgl_components/: app_card.c  app_card.h  app_detail.c  app_list.c  app_list.h
